--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header class="main-header">
-        <p class="user-name">Станислав</p>
+        <p class="user-name">Станислав2154</p>
         <a class="btn-add-list" href="#"><img src="img/plus.png" width="35px" height="35px" alt="добавить"></a>
     </header>
     <main>
